made tooltips work properly

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,9 @@
     <!-- JQuery UI JS -->
     <script src="js/jquery-ui.min.js"></script>
 
+    <!-- OpenTip JS -->
+    <script src="js/opentip-jquery.min.js"></script>
+
     <!-- Materialize JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.0/js/materialize.min.js"></script>
 
@@ -22,6 +25,9 @@
     <!-- Materialize CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.0/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+    <!-- OpenTip CSS -->
+    <link rel="stylesheet" href="styles/opentip.css">
 
     <!-- item-set-builder CSS -->
     <link rel="stylesheet" href="styles/styles.css">
