using HTML drag and drop functionality

--- a/public/index.html
+++ b/public/index.html
@@ -98,7 +98,20 @@
                     <ul id="item-set-blocks" class="collapsible" data-collapsible="expandable">
                         <li>
                             <div class="collapsible-header grey-text text-darken-2" contentEditable=true>New Item Block</div>
-                            <div class="collapsible-body grey lighten-3 grey-text text-darken-2"><p>Lorem ipsum dolor sit amet.</p></div>
+                            <div class="collapsible-body grey lighten-3 grey-text text-darken-2">
+                                <div class="item-slots clearfix">
+                                    <div class="item-slot" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+                                    <div class="item-slot" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+                                    <div class="item-slot" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+                                    <div class="item-slot" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+                                    <div class="item-slot" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+                                    <div class="item-slot" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+                                    <div class="item-slot" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+                                    <div class="item-slot" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+                                    <div class="item-slot" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+                                    <div class="item-slot" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+                                </div>
+                            </div>
                         </li>
                     </ul>
                     <a id="item-set-add-block-button" class="btn-floating btn-large waves-effect waves-light grey darken-2"><i class="material-icons">add</i></a>
