--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
                 <div id="toolbar" class="grey darken-3 grey-text text-lighten-2 col s12 z-depth-3 valign-wrapper">
                     <a class="waves-effect waves-light btn grey darken-2 valign">Reset</a>
                     <a class="waves-effect waves-light btn grey darken-2 valign">Upload</a>
-                    <a class="waves-effect waves-light btn grey darken-2 valign">Download</a>
+                    <a id="download-button" class="waves-effect waves-light btn grey darken-2 valign">Download</a>
                 </div>
             </div>
             <div class="row">
