added gold as favicon

--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,9 @@
 
     <!-- item-set-builder CSS -->
     <link rel="stylesheet" href="styles/styles.css">
+
+    <!-- favicon -->
+    <link rel="icon" href="../images/gold.png" type="image/png"/>
 </head>
 <body>
     <nav class="grey darken-4 z-depth-4">
