--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
                 </div>
             </div>
             <div class="row">
-                <div id="item-selection" class="grey darken-3 grey-text text-lighten-2 col s3 z-depth-3">
+                <div id="item-selection" class="grey darken-3 grey-text text-lighten-2 col s4 z-depth-3">
                     <div class="row">
                         <div class="col s12 no-padding">
                             <ul class="tabs grey-text text-lighten-2">
@@ -97,7 +97,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="item-builder" class="grey darken-3 grey-text text-lighten-2 col s8 offset-s1 z-depth-3">
+                <div id="item-builder" class="grey darken-3 grey-text text-lighten-2 col s8 z-depth-3">
                     <ul id="item-set-blocks" class="collapsible" data-collapsible="expandable">
                         <li>
                             <div class="collapsible-header grey-text text-darken-2" contentEditable=true>New Item Block</div>
