added a little bit of padding

--- a/public/index.html
+++ b/public/index.html
@@ -63,36 +63,40 @@
                 </div>
             </div>
             <div class="row">
-                <div id="item-selection" class="grey darken-3 grey-text text-lighten-2 col s4 z-depth-3">
+                <div id="item-selection" class="col s4">
                     <div class="row">
-                        <div class="col s12 no-padding">
-                            <ul class="tabs grey-text text-lighten-2">
-                                <li class="tab grey darken-4 col s6"><a class="active" href="#all-items-container">All Items</a></li>
-                                <li class="tab grey darken-4 col s6"><a href="#set-info">Set Info</a></li>
-                            </ul>
-                        </div>
-                        <div id="all-items-container" class="col s12">
-                            <div><input placeholder="Search for item" id="item-search-box" type="text"></div>
-                            <div id="all-items"></div>
-                        </div>
-                        <div id="set-info" class="col s12">
+                        <div class="col s11 grey darken-3 grey-text text-lighten-2 z-depth-3">
                             <div class="row">
-                                <div class="col s4 valign-wrapper set-info-form-label-container">
-                                    <h5 class="valign set-info-form-label">Set Name:</h5>
+                                <div class="col s12 no-padding">
+                                    <ul class="tabs grey-text text-lighten-2">
+                                        <li class="tab grey darken-4 col s6"><a class="active" href="#all-items-container">All Items</a></li>
+                                        <li class="tab grey darken-4 col s6"><a href="#set-info">Set Info</a></li>
+                                    </ul>
                                 </div>
-                                <div class="col s8">
-                                    <input placeholder="New Item Set" id="set-form-name" type="text" class="validate">
+                                <div id="all-items-container" class="col s12">
+                                    <div><input placeholder="Search for item" id="item-search-box" type="text"></div>
+                                    <div id="all-items"></div>
                                 </div>
-                                <div class="col s4 valign-wrapper set-info-form-label-container">
-                                    <h5 class="valign set-info-form-label">Maps:</h5>
+                                <div id="set-info" class="col s12">
+                                    <div class="row">
+                                        <div class="col s4 valign-wrapper set-info-form-label-container">
+                                            <h5 class="valign set-info-form-label">Set Name:</h5>
+                                        </div>
+                                        <div class="col s8">
+                                            <input placeholder="New Item Set" id="set-form-name" type="text" class="validate">
+                                        </div>
+                                        <div class="col s4 valign-wrapper set-info-form-label-container">
+                                            <h5 class="valign set-info-form-label">Maps:</h5>
+                                        </div>
+                                        <div class="col s8">
+                                            <input placeholder="Summoner's Rift" id="set-form-maps" type="text" class="validate">
+                                        </div>
+                                    </div>
+                                    <div class="row left-align">
+                                        <input id="fileupload" type="file" name="files[]" data-url="/uploadJSON">
+                                        <pre class="code" id="file-upload-text">No file uploaded...</pre>
+                                    </div>
                                 </div>
-                                <div class="col s8">
-                                    <input placeholder="Summoner's Rift" id="set-form-maps" type="text" class="validate">
-                                </div>
-                            </div>
-                            <div class="row left-align">
-                                <input id="fileupload" type="file" name="files[]" data-url="/uploadJSON">
-                                <pre class="code" id="file-upload-text">No file uploaded...</pre>
                             </div>
                         </div>
                     </div>
