added save button and now checks if storage is available

--- a/public/index.html
+++ b/public/index.html
@@ -60,6 +60,7 @@
                     <a class="waves-effect waves-light btn grey darken-2 valign">Reset</a>
                     <a class="waves-effect waves-light btn grey darken-2 valign">Upload</a>
                     <a id="download-button" class="waves-effect waves-light btn grey darken-2 valign">Download</a>
+                    <a id="save-button" class="waves-effect waves-light btn grey darken-2 valign">Save</a>
                 </div>
             </div>
             <div class="row">
