--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
         <div id="builder-app" class="container">
             <div class="row">
                 <div id="toolbar" class="grey darken-3 grey-text text-lighten-2 col s12 z-depth-3 valign-wrapper">
-                    <a class="waves-effect waves-light btn grey darken-2 valign">Reset</a>
+                    <a id="reset-button" class="waves-effect waves-light btn grey darken-2 valign">Reset</a>
                     <a class="waves-effect waves-light btn grey darken-2 valign">Upload</a>
                     <a id="download-button" class="waves-effect waves-light btn grey darken-2 valign">Download</a>
                     <a id="save-button" class="waves-effect waves-light btn grey darken-2 valign">Save</a>
