file upload functionality added

--- a/public/index.html
+++ b/public/index.html
@@ -58,9 +58,11 @@
             <div class="row">
                 <div id="toolbar" class="grey darken-3 grey-text text-lighten-2 col s12 z-depth-3 valign-wrapper">
                     <a id="reset-button" class="waves-effect waves-light btn grey darken-2 valign">Reset</a>
-                    <a class="waves-effect waves-light btn grey darken-2 valign">Upload</a>
+                    <a id="upload-button" class="waves-effect waves-light btn grey darken-2 valign">Upload</a>
                     <a id="download-button" class="waves-effect waves-light btn grey darken-2 valign">Download</a>
                     <a id="save-button" class="waves-effect waves-light btn grey darken-2 valign">Save</a>
+
+                    <input type="file" id="hidden-upload-button" style="display:none" onchange="handleFileUpload(this.files)">
                 </div>
             </div>
             <div class="row">
