created toggle all item blocks button

--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,7 @@
                     <a id="upload-button" class="waves-effect waves-light btn grey darken-2 valign">Upload</a>
                     <a id="download-button" class="waves-effect waves-light btn grey darken-2 valign">Download</a>
                     <a id="save-button" class="waves-effect waves-light btn grey darken-2 valign">Save</a>
-
+                    <a id="toggle-button" class="waves-effect waves-light btn grey darken-2 valign">Toggle Item Blocks</a>
                     <input type="file" id="hidden-upload-button" style="display:none" onchange="handleFileUpload(this.files)">
                 </div>
             </div>
