trying new button controls for item blocks

--- a/public/index.html
+++ b/public/index.html
@@ -103,6 +103,7 @@
                 <div id="item-builder" class="grey darken-3 grey-text text-lighten-2 col s8 z-depth-3">
                     <ul id="item-set-blocks" class="collapsible" data-collapsible="expandable">
                         <li>
+                            <div class="item-block-buttons noselect"><i class="material-icons toggle-item-block-button text-grey text-darken-2">swap_vert</i><i class="material-icons edit-item-block-button">spellcheck</i></div>
                             <div class="collapsible-header grey-text text-darken-2" contentEditable=true>New Item Block</div>
                             <div class="collapsible-body grey lighten-3 grey-text text-darken-2">
                                 <div class="item-slots clearfix">
