created fake side-nav for filtering with jquery animation

--- a/public/index.html
+++ b/public/index.html
@@ -75,9 +75,15 @@
                                         <li class="tab grey darken-4 col s6"><a class="active" href="#all-items-container">All Items</a></li>
                                         <li class="tab grey darken-4 col s6"><a href="#set-info">Set Info</a></li>
                                     </ul>
-                                </div>
+                                </div> 
                                 <div id="all-items-container" class="col s12">
-                                    <div><input placeholder="Search for item" id="item-search-box" type="text"></div>
+                                    <div class="clearfix">
+                                        <img class="filter-items-button" src="images/icons/filter.png">
+                                        <div style="width: 85%; float: left"><input placeholder="Search for item" id="item-search-box" type="text"></div>
+                                    </div>
+                                    <div class="filter-menu grey lighten-3 z-depth-4">
+                                        <div>checkboxes</div>
+                                    </div>
                                     <div id="all-items"></div>
                                 </div>
                                 <div id="set-info" class="col s12">
