front end filter done

--- a/public/index.html
+++ b/public/index.html
@@ -82,7 +82,115 @@
                                         <div style="width: 85%; float: left"><input placeholder="Search for item" id="item-search-box" type="text"></div>
                                     </div>
                                     <div class="filter-menu grey lighten-3 z-depth-4">
-                                        <div>checkboxes</div>
+                                        <form class="filter-form" action="#">
+                                            <div class="filter-form-title grey darken-4">Filter Items</div>
+                                            <div class="form-body">
+                                                <p>
+                                                    <input type="checkbox" id="filter-all" />
+                                                    <label for="filter-all">All Items</label>
+                                                </p>
+                                                <p>
+                                                    <input type="checkbox" id="filter-starting" />
+                                                    <label for="filter-starting">Starting Items</label>
+                                                </p>
+                                                <p class="filter-indent">
+                                                    <input type="checkbox" id="filter-jungle" />
+                                                    <label for="filter-jungle">Jungle</label>
+                                                </p>
+                                                <p class="filter-indent">
+                                                    <input type="checkbox" id="filter-lane" />
+                                                    <label for="filter-lane">Lane</label>
+                                                </p>
+                                                <p>
+                                                    <input type="checkbox" id="filter-tools" />
+                                                    <label for="filter-tools">Tools</label>
+                                                </p>
+                                                <p class="filter-indent">
+                                                    <input type="checkbox" id="filter-jungle" />
+                                                    <label for="filter-jungle">Consumable</label>
+                                                </p>
+                                                <p class="filter-indent">
+                                                    <input type="checkbox" id="filter-gold" />
+                                                    <label for="filter-gold">Gold Income</label>
+                                                </p>
+                                                <p class="filter-indent">
+                                                    <input type="checkbox" id="filter-vision" />
+                                                    <label for="filter-vision">Vision & Trinkets</label>
+                                                </p>
+                                                <p>
+                                                    <input type="checkbox" id="filter-defense" />
+                                                    <label for="filter-defense">Defense</label>
+                                                </p>
+                                                <p class="filter-indent">
+                                                    <input type="checkbox" id="filter-armor" />
+                                                    <label for="filter-armor">Armor</label>
+                                                </p>
+                                                <p class="filter-indent">
+                                                    <input type="checkbox" id="filter-health" />
+                                                    <label for="filter-health">Health</label>
+                                                </p>
+                                                <p class="filter-indent">
+                                                    <input type="checkbox" id="filter-healthregen" />
+                                                    <label for="filter-healthregen">Health Regen</label>
+                                                </p>
+                                                <p class="filter-indent">
+                                                    <input type="checkbox" id="filter-mr" />
+                                                    <label for="filter-mr">Magic Resist</label>
+                                                </p>
+                                                <p>
+                                                    <input type="checkbox" id="filter-attack" />
+                                                    <label for="filter-attack">Attack</label>
+                                                </p>
+                                                <p class="filter-indent">
+                                                    <input type="checkbox" id="filter-attackspeed" />
+                                                    <label for="filter-attackspeed">Attack Speed</label>
+                                                </p>
+                                                <p class="filter-indent">
+                                                    <input type="checkbox" id="filter-crit" />
+                                                    <label for="filter-crit">Critical Strike</label>
+                                                </p>
+                                                <p class="filter-indent">
+                                                    <input type="checkbox" id="filter-damage" />
+                                                    <label for="filter-damage">Damage</label>
+                                                </p>
+                                                <p class="filter-indent">
+                                                    <input type="checkbox" id="filter-lifesteal" />
+                                                    <label for="filter-lifesteal">Life Steal</label>
+                                                </p>
+                                                <p>
+                                                    <input type="checkbox" id="filter-magic" />
+                                                    <label for="filter-magic">Magic</label>
+                                                </p>
+                                                <p class="filter-indent">
+                                                    <input type="checkbox" id="filter-cdr" />
+                                                    <label for="filter-cdr">Cooldown Reduction</label>
+                                                </p>
+                                                <p class="filter-indent">
+                                                    <input type="checkbox" id="filter-mana" />
+                                                    <label for="filter-mana">Mana</label>
+                                                </p>
+                                                <p class="filter-indent">
+                                                    <input type="checkbox" id="filter-manaregen" />
+                                                    <label for="filter-manaregen">Mana Regen</label>
+                                                </p>
+                                                <p class="filter-indent">
+                                                    <input type="checkbox" id="filter-ap" />
+                                                    <label for="filter-ap">Ability Power</label>
+                                                </p>
+                                                <p>
+                                                    <input type="checkbox" id="filter-movement" />
+                                                    <label for="filter-movement">Movement</label>
+                                                </p>
+                                                <p class="filter-indent">
+                                                    <input type="checkbox" id="filter-boots" />
+                                                    <label for="filter-boots">Boots</label>
+                                                </p>
+                                                <p class="filter-indent">
+                                                    <input type="checkbox" id="filter-moveother" />
+                                                    <label for="filter-moveother">Other Movement</label>
+                                                </p>
+                                            </div>
+                                        </form>
                                     </div>
                                     <div id="all-items"></div>
                                 </div>
