consumables are not jungle items

--- a/public/index.html
+++ b/public/index.html
@@ -106,8 +106,8 @@
                                                     <label for="filter-tools">Tools</label>
                                                 </p>
                                                 <p class="filter-indent">
-                                                    <input type="checkbox" id="filter-jungle" />
-                                                    <label for="filter-jungle">Consumable</label>
+                                                    <input type="checkbox" id="filter-consumable" />
+                                                    <label for="filter-consumable">Consumable</label>
                                                 </p>
                                                 <p class="filter-indent">
                                                     <input type="checkbox" id="filter-gold" />
