--- a/public/index.html
+++ b/public/index.html
@@ -92,14 +92,14 @@
                                                 <p>
                                                     <input type="checkbox" id="filter-starting" />
                                                     <label for="filter-starting">Starting Items</label>
-                                                </p>
-                                                <p class="filter-indent">
-                                                    <input type="checkbox" id="filter-jungle" />
-                                                    <label for="filter-jungle">Jungle</label>
+                                                    <p class="filter-indent">
+                                                    <input type="checkbox" id="Jungle" />
+                                                    <label for="Jungle">Jungle</label>
                                                 </p>
                                                 <p class="filter-indent">
                                                     <input type="checkbox" id="filter-lane" />
                                                     <label for="filter-lane">Lane</label>
+                                                </p>
                                                 </p>
                                                 <p>
                                                     <input type="checkbox" id="filter-tools" />
